# rust-analyzer-env-var-test

./: Cargo.toml
.cargo/: config.toml
migrations/: 20240721214712_test.sql
sqlite/: primary.sqlite3
src/: main.rs
